docroot/themes/custom/twentyseventeen/sass/base/elements/_elements.scss
// Base HTML Elements.
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}
html,
body {
  min-height: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
}
body {
  font-family: $body_font;
  font-size: 1em;
  line-height: 140%;
  /* Leave space for footer */
  position: relative;
  padding-bottom: 350px;
}
// Base Headings
//
// Markup: headlines.twig
//
// Style guide: base.headlines
h1,
h2,
h3,
h4 {
  color: $heading;
  font-weight: 400;
  font-family: $heading_font;
  padding: 0 0 .3em;
  margin: 0;
}
h1 {
  font-size: 280%;
  line-height: 165%;
}
h2 {
  font-size: 230%;
  line-height: 145%;
}
h3 {
  font-size: 210%;
  line-height: 145%;
}
h4 {
  font-size: 190%;
  line-height: 145%;
}
body .menu-item {
  padding-top: 0;
  margin: 0;
}
// Base Text
//
// Markup: text.twig
//
// Style guide: base.text
a,
a:link,
a:visited {
  text-decoration: none;
  color: $link;
  cursor: inherit;
  &:hover {
    text-decoration: underline;
  }
}
body p {
  margin: 3px 0 10px;
}
// Blockquote
//
// Markup: blockquote.twig
//
// Style guide: base.blockquote
blockquote {
  padding: 0 15px;
  color: $lt-blk;
  border-left: 4px solid $lt-gr;
  &:last-child {
    margin-bottom: 0;
  }
}
// List Types
//
// Markup: lists.twig
//
// Style guide: base.lists

// OL items
ol {
  padding: 0 0 0 30px;
  margin: 0 0 1px;
  li {
    margin: 4px 0;
    padding: 0;
  }
}
ol ol {
  padding: 0 0 0 22.5px;
}
ol ol ol {
  padding: 0 0 0 22.5px;
}
// UL items
ul {
  padding: 0 0 0 30px;
  margin: 0 0 1px;
  li {
    margin: 4px 0;
    padding: 0;
  }
}
ul ul {
  padding: 0 0 0 22.5px;
}
ul ul ul {
  padding: 0 0 0 22.5px;
}
// Tables
//
// Markup: table.twig
//
// Style guide: base.table
table {
  width: 100%;
  th {
    font-weight: 600;
    text-align: left;
    background-color: $lt-gr;
    padding: 4px 5px;
  }
  td {
    border: 0;
    outline: none;
    padding: 4px 5px;
  }
  thead {
    border: 1px solid $lt-gr;
    border-bottom: 0;
  }
  tbody {
    border: 1px solid $lt-gr;
  }
  tbody tr:nth-child(even) {
    background-color: $lt-gr;
    border-top: 1px solid $lt-gr;
    border-bottom: 1px solid $lt-gr;
  }
}

